sumo/tests/duarouter/trips/errors/vehicle_empty_arrivalspeed/errors.duarouter
Error: Attribute 'arrivalSpeed' in definition of a trip is empty.
Error: Invalid arrivalSpeed definition for vehicle ''
Quitting (on error).
